[gd_scene load_steps=10 format=2]

[ext_resource path="res://daojvxitong/PanelContainer1.gd" type="Script" id=1]
[ext_resource path="res://daojvxitong/DaoJuLanForm.gd" type="Script" id=3]
[ext_resource path="res://SourceHanSansCN-Normal.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://daojvxitong/DaoJuLanForm.tres" type="Theme" id=5]

[sub_resource type="DynamicFont" id=8]
size = 38
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxFlat" id=12]

[sub_resource type="StyleBoxFlat" id=13]

[sub_resource type="StyleBoxFlat" id=14]

[sub_resource type="StyleBoxFlat" id=15]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_scale = Vector2( 0.4, 0.4 )
theme = ExtResource( 5 )
script = ExtResource( 3 )

[node name="Button" type="Button" parent="."]
margin_left = 584.0
margin_top = 15.0
margin_right = 707.0
margin_bottom = 66.0
text = "随机放垃圾"

[node name="Button2" type="Button" parent="."]
margin_left = 821.0
margin_top = 14.0
margin_right = 897.0
margin_bottom = 65.0
text = "整理背包"

[node name="Panel" type="Panel" parent="."]
margin_right = 452.0
margin_bottom = 674.0

[node name="GridContainer" type="GridContainer" parent="Panel"]
anchor_left = 0.5
anchor_top = 0.663
anchor_right = 0.5
anchor_bottom = 0.663
margin_left = -180.0
margin_top = -326.862
margin_right = 206.0
margin_bottom = 141.138
custom_constants/vseparation = 11
custom_constants/hseparation = 11
columns = 5

[node name="PanelContainer1" type="PanelContainer" parent="Panel/GridContainer"]
margin_right = 66.0
margin_bottom = 66.0
rect_min_size = Vector2( 66, 66 )
script = ExtResource( 1 )

[node name="PanelContainer2" type="PanelContainer" parent="Panel/GridContainer"]
margin_left = 77.0
margin_right = 143.0
margin_bottom = 66.0
rect_min_size = Vector2( 66, 66 )
script = ExtResource( 1 )

[node name="PanelContainer3" type="PanelContainer" parent="Panel/GridContainer"]
margin_left = 154.0
margin_right = 220.0
margin_bottom = 66.0
rect_min_size = Vector2( 66, 66 )
script = ExtResource( 1 )

[node name="PanelContainer4" type="PanelContainer" parent="Panel/GridContainer"]
margin_left = 231.0
margin_right = 297.0
margin_bottom = 66.0
rect_min_size = Vector2( 66, 66 )
script = ExtResource( 1 )

[node name="PanelContainer5" type="PanelContainer" parent="Panel/GridContainer"]
margin_left = 308.0
margin_right = 374.0
margin_bottom = 66.0
rect_min_size = Vector2( 66, 66 )
script = ExtResource( 1 )

[node name="PanelContainer6" type="PanelContainer" parent="Panel/GridContainer"]
margin_top = 77.0
margin_right = 66.0
margin_bottom = 143.0
rect_min_size = Vector2( 66, 66 )
script = ExtResource( 1 )

[node name="PanelContainer7" type="PanelContainer" parent="Panel/GridContainer"]
margin_left = 77.0
margin_top = 77.0
margin_right = 143.0
margin_bottom = 143.0
rect_min_size = Vector2( 66, 66 )
script = ExtResource( 1 )

[node name="PanelContainer8" type="PanelContainer" parent="Panel/GridContainer"]
margin_left = 154.0
margin_top = 77.0
margin_right = 220.0
margin_bottom = 143.0
rect_min_size = Vector2( 66, 66 )
script = ExtResource( 1 )

[node name="PanelContainer9" type="PanelContainer" parent="Panel/GridContainer"]
margin_left = 231.0
margin_top = 77.0
margin_right = 297.0
margin_bottom = 143.0
rect_min_size = Vector2( 66, 66 )
script = ExtResource( 1 )

[node name="PanelContainer10" type="PanelContainer" parent="Panel/GridContainer"]
margin_left = 308.0
margin_top = 77.0
margin_right = 374.0
margin_bottom = 143.0
rect_min_size = Vector2( 66, 66 )
script = ExtResource( 1 )

[node name="PanelContainer11" type="PanelContainer" parent="Panel/GridContainer"]
margin_top = 154.0
margin_right = 66.0
margin_bottom = 220.0
rect_min_size = Vector2( 66, 66 )
script = ExtResource( 1 )

[node name="PanelContainer12" type="PanelContainer" parent="Panel/GridContainer"]
margin_left = 77.0
margin_top = 154.0
margin_right = 143.0
margin_bottom = 220.0
rect_min_size = Vector2( 66, 66 )
script = ExtResource( 1 )

[node name="PanelContainer13" type="PanelContainer" parent="Panel/GridContainer"]
margin_left = 154.0
margin_top = 154.0
margin_right = 220.0
margin_bottom = 220.0
rect_min_size = Vector2( 66, 66 )
rect_pivot_offset = Vector2( 186, 134 )
script = ExtResource( 1 )

[node name="PanelContainer14" type="PanelContainer" parent="Panel/GridContainer"]
margin_left = 231.0
margin_top = 154.0
margin_right = 297.0
margin_bottom = 220.0
rect_min_size = Vector2( 66, 66 )
script = ExtResource( 1 )

[node name="PanelContainer15" type="PanelContainer" parent="Panel/GridContainer"]
margin_left = 308.0
margin_top = 154.0
margin_right = 374.0
margin_bottom = 220.0
rect_min_size = Vector2( 66, 66 )
script = ExtResource( 1 )

[node name="PanelContainer16" type="PanelContainer" parent="Panel/GridContainer"]
margin_top = 231.0
margin_right = 66.0
margin_bottom = 297.0
rect_min_size = Vector2( 66, 66 )
script = ExtResource( 1 )

[node name="PanelContainer17" type="PanelContainer" parent="Panel/GridContainer"]
margin_left = 77.0
margin_top = 231.0
margin_right = 143.0
margin_bottom = 297.0
rect_min_size = Vector2( 66, 66 )
script = ExtResource( 1 )

[node name="PanelContainer18" type="PanelContainer" parent="Panel/GridContainer"]
margin_left = 154.0
margin_top = 231.0
margin_right = 220.0
margin_bottom = 297.0
rect_min_size = Vector2( 66, 66 )
script = ExtResource( 1 )

[node name="PanelContainer19" type="PanelContainer" parent="Panel/GridContainer"]
margin_left = 231.0
margin_top = 231.0
margin_right = 297.0
margin_bottom = 297.0
rect_min_size = Vector2( 66, 66 )
script = ExtResource( 1 )

[node name="PanelContainer20" type="PanelContainer" parent="Panel/GridContainer"]
margin_left = 308.0
margin_top = 231.0
margin_right = 374.0
margin_bottom = 297.0
rect_min_size = Vector2( 66, 66 )
script = ExtResource( 1 )

[node name="PanelContainer21" type="PanelContainer" parent="Panel/GridContainer"]
margin_top = 308.0
margin_right = 66.0
margin_bottom = 374.0
rect_min_size = Vector2( 66, 66 )
script = ExtResource( 1 )

[node name="PanelContainer22" type="PanelContainer" parent="Panel/GridContainer"]
margin_left = 77.0
margin_top = 308.0
margin_right = 143.0
margin_bottom = 374.0
rect_min_size = Vector2( 66, 66 )
script = ExtResource( 1 )

[node name="PanelContainer23" type="PanelContainer" parent="Panel/GridContainer"]
margin_left = 154.0
margin_top = 308.0
margin_right = 220.0
margin_bottom = 374.0
rect_min_size = Vector2( 66, 66 )
script = ExtResource( 1 )

[node name="PanelContainer24" type="PanelContainer" parent="Panel/GridContainer"]
margin_left = 231.0
margin_top = 308.0
margin_right = 297.0
margin_bottom = 374.0
rect_min_size = Vector2( 66, 66 )
script = ExtResource( 1 )

[node name="PanelContainer25" type="PanelContainer" parent="Panel/GridContainer"]
margin_left = 308.0
margin_top = 308.0
margin_right = 374.0
margin_bottom = 374.0
rect_min_size = Vector2( 66, 66 )
script = ExtResource( 1 )

[node name="PanelContainer26" type="PanelContainer" parent="Panel/GridContainer"]
margin_top = 385.0
margin_right = 66.0
margin_bottom = 451.0
rect_min_size = Vector2( 66, 66 )
script = ExtResource( 1 )

[node name="PanelContainer27" type="PanelContainer" parent="Panel/GridContainer"]
margin_left = 77.0
margin_top = 385.0
margin_right = 143.0
margin_bottom = 451.0
rect_min_size = Vector2( 66, 66 )
script = ExtResource( 1 )

[node name="PanelContainer28" type="PanelContainer" parent="Panel/GridContainer"]
margin_left = 154.0
margin_top = 385.0
margin_right = 220.0
margin_bottom = 451.0
rect_min_size = Vector2( 66, 66 )
script = ExtResource( 1 )

[node name="PanelContainer29" type="PanelContainer" parent="Panel/GridContainer"]
margin_left = 231.0
margin_top = 385.0
margin_right = 297.0
margin_bottom = 451.0
rect_min_size = Vector2( 66, 66 )
script = ExtResource( 1 )

[node name="PanelContainer30" type="PanelContainer" parent="Panel/GridContainer"]
margin_left = 308.0
margin_top = 385.0
margin_right = 374.0
margin_bottom = 451.0
rect_min_size = Vector2( 66, 66 )
script = ExtResource( 1 )

[node name="Label" type="Label" parent="Panel"]
margin_left = 16.0
margin_top = 8.0
margin_right = 95.0
margin_bottom = 43.0
text = "背包"

[node name="Node2D" type="Node2D" parent="Panel"]

[node name="Sprite" type="Sprite" parent="Panel/Node2D"]
modulate = Color( 1, 1, 1, 0.737255 )
self_modulate = Color( 1, 1, 1, 0.737255 )
z_index = 1

[node name="yidong_miaoshu" type="Panel" parent="Panel/Node2D/Sprite"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -0.5
margin_right = 99.5
margin_bottom = 80.0

[node name="Label" type="Label" parent="Panel/Node2D/Sprite/yidong_miaoshu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -50.0
margin_top = -40.0
margin_right = 50.0
margin_bottom = 40.0
text = "物品提示"
autowrap = true

[node name="Node2D" type="Node2D" parent="Panel/Node2D"]

[node name="PopupMenu" type="PopupMenu" parent="Panel/Node2D/Node2D"]
margin_left = -165.0
margin_right = -89.0
margin_bottom = 87.0
theme = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="use" type="Button" parent="Panel/Node2D/Node2D/PopupMenu"]
anchor_right = 1.0
margin_top = 2.216
margin_bottom = 33.216
text = "使用物品"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="zhuangbei" type="Button" parent="Panel/Node2D/Node2D/PopupMenu"]
anchor_right = 1.0
margin_top = 44.216
margin_bottom = 75.216
text = "装备物品"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="diu" type="Button" parent="Panel/Node2D/Node2D/PopupMenu"]
visible = false
anchor_right = 1.0
margin_top = 88.216
margin_bottom = 119.216
text = "丢弃物品"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PopupDialog" type="PopupDialog" parent="Panel/Node2D"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -166.149
margin_top = 104.216
margin_right = 97.851
margin_bottom = 234.216

[node name="Label" type="Label" parent="Panel/Node2D/PopupDialog"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 8 )
text = "物品满了"
align = 1
autowrap = true

[node name="PanelZhuangBei" type="Panel" parent="Panel"]
margin_left = 15.0
margin_top = 40.0
margin_right = 360.0
margin_bottom = 120.0

[node name="PanelContainer1" type="PanelContainer" parent="Panel/PanelZhuangBei"]
anchor_left = -0.039
anchor_top = -0.2
anchor_right = -0.039
anchor_bottom = -0.2
margin_left = 38.455
margin_top = 18.5
margin_right = 104.455
margin_bottom = 84.5
rect_min_size = Vector2( 66, 66 )
custom_styles/panel = SubResource( 12 )
script = ExtResource( 1 )

[node name="PanelContainer5" type="PanelContainer" parent="Panel/PanelZhuangBei"]
margin_left = 102.5
margin_top = 2.5
margin_right = 168.5
margin_bottom = 68.5
rect_min_size = Vector2( 66, 66 )
custom_styles/panel = SubResource( 13 )
script = ExtResource( 1 )

[node name="PanelContainer6" type="PanelContainer" parent="Panel/PanelZhuangBei"]
margin_left = 180.0
margin_top = 2.5
margin_right = 246.0
margin_bottom = 68.5
rect_min_size = Vector2( 66, 66 )
rect_pivot_offset = Vector2( -104, -96 )
custom_styles/panel = SubResource( 14 )
script = ExtResource( 1 )

[node name="PanelContainer7" type="PanelContainer" parent="Panel/PanelZhuangBei"]
margin_left = 255.0
margin_top = 2.5
margin_right = 321.0
margin_bottom = 68.5
rect_min_size = Vector2( 66, 66 )
rect_pivot_offset = Vector2( -104, -96 )
custom_styles/panel = SubResource( 15 )
script = ExtResource( 1 )

[node name="lblTouBu" type="Label" parent="Panel"]
margin_left = 40.0
margin_top = 62.5
margin_right = 106.0
margin_bottom = 87.5
text = "头部"
align = 1

[node name="lblShenTi" type="Label" parent="Panel"]
margin_left = 117.5
margin_top = 62.5
margin_right = 183.5
margin_bottom = 87.5
text = "身体"
align = 1

[node name="lblWuQi" type="Label" parent="Panel"]
margin_left = 195.0
margin_top = 62.5
margin_right = 261.0
margin_bottom = 87.5
text = "武器"
align = 1

[node name="lblXieZi" type="Label" parent="Panel"]
margin_left = 270.0
margin_top = 62.5
margin_right = 336.0
margin_bottom = 87.5
text = "鞋子"
align = 1

[node name="Tween" type="Tween" parent="."]

[node name="Button3" type="Button" parent="."]
margin_left = 585.0
margin_top = 350.0
margin_right = 817.0
margin_bottom = 581.0
text = "存档界面"

[node name="ButtonCanel" type="Button" parent="."]
margin_left = 265.0
margin_top = 607.5
margin_right = 345.0
margin_bottom = 644.5
text = "返回"

[node name="ButtonSava" type="Button" parent="."]
margin_left = 585.0
margin_top = 607.5
margin_right = 665.0
margin_bottom = 644.5
text = "保存"

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Panel/Node2D/Node2D/PopupMenu/diu" to="." method="_on_diu_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="ButtonCanel" to="." method="_on_ButtonCanel_pressed"]
[connection signal="pressed" from="ButtonSava" to="." method="_on_ButtonSava_pressed"]
